# image-processing-chromosomes

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
image-processing/: colors_test.ipynb  segmentacao.ipynb  segmentacao_avaliacao.ipynb
image-processing/metricas/: LAB_l_thresh.json  LAB_l_thresh_adap.json  LAB_l_thresh_adap_new.json  LAB_l_thresh_otsu.json  LAB_thresh.json  LAB_thresh_adap.json  LAB_thresh_otsu.json  RGB_g_thresh.json  RGB_g_thresh_adap.json  RGB_g_thresh_pos_processamento.json  YCRCB_thresh_adap.json  YCRCB_thresh_otsu.json  YCRCB_y_thresh_adap.json  YCRCB_y_thresh_otsu.json  adap_original.json  adap_original_pos_processado.json  medias_totais.json  otsu_original.json  segme_original.json
