[tool.poetry]
name = "image-processing-chromosomes"
version = "0.1.0"
description = "Chromosome image processing project"
authors = ["FernandaSzAdr <fsandrade25@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
opencv-python = "^4.1"
jupyterlab = "^1.1"
jupyter-contrib-nbextensions = "^0.5.1"
pathlib = "^1.0"
matplotlib = "^3.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.12.2"
flake8 = "^3.7"
pre-commit = "^1.18"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
jupyter-contrib-nbextensions = "^0.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
